# chess-move-recognition

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  config.yaml  dev-requirements.txt  pyproject.toml  requirements.txt
data/: eval_manifest.json
model_comparison/: yolo11_sml_multimodel_compare.ipynb
models/scripts/: chess_batch_warp_generator.py  yolo11_sml_multimodel_compare.py
models/scripts/dataset_generation/: rename_except_calib.py
models/scripts/training/: learning_all.ipynb  speedtest.ipynb  train_yolo.ipynb
notebooks/: demo.ipynb
src/: app_gui.py  app_logging.py  chess_io.py  config.py  io_utils.py  requirements.txt  types.py
src/baseline/: single_frame.py
src/calibration/: calibrate_camera.py  rectify.py
src/common/: app_logging.py  chess_io.py  homography_cache.py  types.py
src/detection/: detect_pieces.py
src/inference/: move_infer.py  pipeline.py
src/pipeline/: fen_utils.py  live_base.py  live_entrypoint.py
src/pipeline/calibration/: homography.npy
src/pipeline/comparison/: baseline_offline.py  common.py  detection_log.py  (+8 more)
src/pipeline_comparison/: baseline_offline.py  common.py  compare_pipelines.py  detection_log.py  metrics.py  multistage_offline.py  prepare_ground_truth.py
src/stage1/: board_rectifier.py
src/stage2/: piece_detection.py  piece_overlay.py
src/stage3/: baseline_single_frame.py  move_tracking.py
src/utils/: export_frames.py  geometry.py  io.py  visualize.py
training/notebooks/: statistics.ipynb
training_images_generation/: chess_batch_warp_generator.ipynb  rename_except_calib.py
(+6 files in other folders)
